fix scroll down spacing

--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -49,7 +49,7 @@
   position: absolute;
   transform: translate(-50%,0%);
   left: 50%;
-  bottom: 2%;
+  bottom: 10%;
   width: 100px;
   z-index: 5;
   height: 50px;
@@ -80,7 +80,7 @@
     transition: .5s;
     position: absolute;
     transform: translate(-50%, -50%);
-    left: 80%;
+    left: 100%;
     top: 30%;
     width: 200px;
   }
